[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name="LNT"
requires-python = ">= 3.6"
dynamic = ["version"]
authors = [
  {name = 'Daniel Dunbar', email = 'daniel@zuster.org'}
]
description = "LLVM Nightly Test Infrastructure"
readme = "README.md"
license = {text = "Apache-2.0 with LLVM exception" }
keywords = ["web", "testing", "performance", "development", "llvm"]
classifiers = [
  'Development Status :: 4 - Beta',
  'Environment :: Web Environment',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: Apache-2.0 with LLVM exception',
  'Natural Language :: English',
  'Operating System :: OS Independent',
  'Programming Language :: Python :: 3',
  'Topic :: Software Development :: Quality Assurance',
  'Topic :: Software Development :: Testing',
]
dependencies = [
  "six",
  "aniso8601==1.2.0",
  "Flask==0.12.2",
  "Flask-RESTful==0.3.4",
  "Jinja2==2.7.2",
  "MarkupSafe==0.23",
  "SQLAlchemy==1.2.19",
  "Werkzeug==0.12.2",
  "itsdangerous==0.24",
  "python-gnupg==0.3.7",
  "pytz==2016.10",
  "WTForms==2.0.2",
  "Flask-WTF==0.12",
  "typing",
  "click==6.7",
  "pyyaml==5.1.2",
  "requests",
  "lit==18.1.8",
  "certifi"
]

[project.optional-dependencies]
server = [
  "psycopg2==2.8",
  "gunicorn==19.9.0",
  "progressbar2"
]

[project.urls]
Homepage = "https://llvm.org"
Documentation = "https://llvm.org/docs/lnt"
Repository = "https://github.com/llvm/llvm-lnt"

[project.scripts]
lnt = "lnt.lnttool:main"

[tool.setuptools.dynamic]
version = {attr = "lnt.__version__"}

[tool.setuptools.packages]
find = {}

